# cdt

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.agents/rules/: cdt-release.md
.github/workflows/: ci.yml  pr.yml  release.yml
cdt/: __main__.py  agent_release.py  agent_release_worker.py  artifacts.py  cdt.schema.json  cli.py  config.py  doctor.py  init_project.py  migration.py  runner.py  runs.py  schema.py  sdk.py  self_update.py  sounds.py  ui.py  versioning.py
cdt/flows/: __init__.py  deploy_flow.py  ios_flow.py  prod_flow.py  test_flow.py
cdt/pipeline/: __init__.py  builtins.py  config.py  context.py  executor.py  planning.py  preflight.py  registry.py  runner.py  step.py  validation.py
cdt/services/: appstore.py  firebase.py  notify.py  tracker.py
cdt/steps/: __init__.py  android.py  appstore.py  artifact.py  firebase.py  flutter.py  git.py  hook.py  ios.py  notify.py  tracker.py  web.py
docs/: ai-agents.md  getting-started.md  pipelines.md  runs.md  skills.md
docs/plans/: 2026-07-03-next-stage-pipeline-steps.md  2026-07-04-clean-020-runtime-ux.md  2026-07-04-remove-cdt-migrate-legacy.md  2026-07-04-remove-env-build-step-alias.md  2026-07-04-yaml-only-pipelines-legacy-migration.md  2026-07-06-step-metadata-artifact-contract-cleanup.md  2026-07-07-agent-release-review-fixes.md  2026-07-07-cdt-v0.3.3-improvements.md  2026-07-07-cicd-robustness-rm-rf-dist-pytest-q-retry.md  2026-07-07-release-resume-status.md  2026-07-07-token-efficient-cdt-releases-cicd-robustness.md  2026-07-21-agent-first-cdt-roadmap.md  20260706-cdt-self-update-command.md
examples/: cdt.yaml
examples/cdt_steps/: offline.py
plans/: 2026-07-06-refine-planner-artifact-flow.md  2026-07-06-step-metadata-artifact-contract-cleanup.md  2026-07-06-v030-planning-foundation.md
scripts/: reinstall.sh  release.py
skills/cdt-release/: SKILL.md
tests/: _helpers.py  test_agent_first.py  test_agent_release.py  test_android.py  test_cli.py  test_commands.py  test_doctor.py  test_examples.py  test_flows_deploy.py  test_flows_ios.py  test_flows_prod.py  test_flows_test.py  test_ios_flutter.py  test_ios_xcode.py  test_pipeline_config.py  test_pipeline_context.py  test_pipeline_error_ux.py  test_pipeline_executor.py  test_pipeline_plan.py  test_pipeline_registry.py  test_pipeline_resume.py  test_pipeline_status_file.py  test_release_script.py  test_runner.py  test_runtime_ux.py  test_self_update.py  test_services_appstore.py  test_services_firebase.py  test_services_notify.py  test_services_tracker.py  test_skills.py  test_sounds.py  test_steps_artifact.py  test_steps_firebase.py  test_steps_hook.py  test_ui.py  test_versioning.py  test_web.py  test_workflows.py
