[project]
name = "cdt"
version = "0.1.0"
description = "Command line toolkit for Flutter release workflows and YAML pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["typer>=0.12", "python-dotenv>=1.0.1", "pyjwt[crypto]>=2.10.1", "rich>=13.0.0", "PyYAML>=6.0.0"]
keywords = ["flutter", "release", "deploy", "cli", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.8",
    "twine>=5.0",
]

[project.scripts]
cdt = "cdt.cli:app"

[project.urls]
Repository = "https://github.com/Sergionius/cdt"
Issues = "https://github.com/Sergionius/cdt/issues"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
