[project]
name = "cdt-release"
version = "0.4.0"
description = "Agent-first release automation CLI for mobile, web, and custom deployments"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["typer>=0.12", "python-dotenv>=1.0.1", "pyjwt[crypto]>=2.10.1", "rich>=13.0.0", "PyYAML>=6.0.0"]
keywords = ["ai", "release", "deploy", "cli", "pipeline", "automation", "mobile", "web", "ios", "android", "flutter", "testing", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "twine>=5.0",
]

[project.scripts]
cdt = "cdt.cli:app"

[project.urls]
Repository = "https://github.com/Sergionius/cdt"
Documentation = "https://github.com/Sergionius/cdt/tree/main/docs"
Changelog = "https://github.com/Sergionius/cdt/blob/main/CHANGELOG.md"
Issues = "https://github.com/Sergionius/cdt/issues"

[tool.setuptools.packages.find]
include = ["cdt*"]

[tool.setuptools.package-data]
cdt = ["py.typed", "cdt.schema.json"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
